remove auth endpoints
