# resources/docs/swagger-v2.yml
@@ -2201,13 +2201,6 @@ definitions:
         type: string
   Empty:
     type: object
-  AuthChange:
-    type: object
-    properties:
-      token:
-        type: string
-      password:
-        type: string
   AuthReset:
     type: object
     properties:
@@ -2325,25 +2318,6 @@ definitions:
         type: string
       validation_status:
         type: boolean
-  UserCreateComplete:
-    type: object
-    properties:
-      token:
-        type: string
-      password:
-        type: string
-      first_name:
-        type: string
-      last_name:
-        type: string
-      email_address:
-        type: string
-      job_role:
-        type: string
-      phone_number:
-        type: string
-      role:
-        type: string
 paths:
   '/v2/admin/{ENTITY}/{UUID}/reminder':
     post:
@@ -2413,207 +2387,6 @@ paths:
           description: OK
           schema:
             type: file
-  /v2/auth/complete/signup:
-    put:
-      operationId: put-auth-complete-signup
-      summary: Complete a user's signup process
-      tags:
-        - Auth
-      security: []
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      parameters:
-        - name: Body
-          in: body
-          required: true
-          schema:
-            type: object
-            properties:
-              token:
-                type: string
-              password:
-                type: string
-              first_name:
-                type: string
-              last_name:
-                type: string
-              email_address:
-                type: string
-              job_role:
-                type: string
-              phone_number:
-                type: string
-              role:
-                type: string
-      responses:
-        '200':
-          description: OK
-          schema:
-            type: object
-  /auth/reset:
-    post:
-      operationId: post-auth-reset
-      summary: Send a password reset email to a user or admin
-      tags:
-        - Auth
-      security: []
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      parameters:
-        - name: Body
-          in: body
-          required: true
-          schema:
-            type: object
-            properties:
-              email_address:
-                type: string
-              callback_url:
-                type: string
-      responses:
-        '200':
-          description: OK
-          schema:
-            type: object
-  /auth/send-login-details:
-    post:
-      operationId: post-auth-send-login-details
-      summary: Send a password reset email to a user or admin
-      tags:
-        - Auth
-      security: []
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      parameters:
-        - name: Body
-          in: body
-          required: true
-          schema:
-            type: object
-            properties:
-              email_address:
-                type: string
-              callback_url:
-                type: string
-      responses:
-        '200':
-          description: OK
-          schema:
-            type: object
-  /auth/mail:
-    get:
-      summary: Get email address by reset token
-      description: 'Retrieves the email address associated with a reset token. If the token has already been used or does not exist, indicates that the token is used.'
-      parameters:
-        - in: query
-          name: token
-          required: true
-          description: The reset token
-          type: string
-      responses:
-        '200':
-          description: Successful response
-          schema:
-            type: object
-            properties:
-              success:
-                type: boolean
-                example: true
-              data:
-                type: object
-                properties:
-                  email_address:
-                    type: string
-                    nullable: true
-                    example: user@example.com
-                    description: 'The email address associated with the reset token, or null if the token is already used.'
-                  token_used:
-                    type: boolean
-                    example: false
-                    description: 'Indicates whether the token has already been used. `true` if the token was used or does not exist, and `false` otherwise.'
-                  locale:
-                    type: string
-                    example: es-MX
-                    description: The locale to use for this user.
-        '404':
-          description: User not found for the associated token
-          schema:
-            type: object
-            properties:
-              success:
-                type: boolean
-                example: false
-              message:
-                type: string
-                example: User not found
-        '500':
-          description: Internal server error
-          schema:
-            type: object
-            properties:
-              success:
-                type: boolean
-                example: false
-              message:
-                type: string
-                example: Internal Server Error
-  /auth/store:
-    post:
-      operationId: post-auth-store
-      summary: set a user's or admin's password
-      tags:
-        - Auth
-      security: []
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      parameters:
-        - name: Body
-          in: body
-          required: true
-          schema:
-            type: object
-            properties:
-              token:
-                type: string
-              password:
-                type: string
-      responses:
-        '200':
-          description: OK
-          schema:
-            type: object
-  /v2/users/resend:
-    post:
-      operationId: post-v2-users-resend
-      summary: 'Send a verification email to an email, if it exists'
-      tags:
-        - Auth
-      produces:
-        - application/json
-      parameters:
-        - name: Body
-          in: body
-          required: true
-          schema:
-            type: object
-            properties:
-              callback_url:
-                type: string
-              email_address:
-                type: string
-      responses:
-        '200':
-          description: OK
-          schema:
-            type: object
   /v2/export-image:
     post:
       operationId: exportImage
